--- a/style.css
+++ b/style.css
@@ -4,3 +4,314 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+ul {
+    width: 100%;
+    height: 200%;
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+    justify-content: center;
+    background: white;
+}
+.link {
+    text-decoration: none;
+    color: #000000;
+    font-size: 22px;
+    padding: 1rem 2rem;
+    position: relative;
+}
+.link::before,
+.link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: #000000;
+    transform: scaleX(0);
+    transition: all 0.6s ease;
+}
+.link::before {
+    top: 0;
+    left: 0;
+    transform-origin: left;
+}
+.link::after {
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+}
+.link:hover::before,
+.link:hover::after {
+    transform: scaleX(1);
+}
+body{
+    background: rgb(0, 0, 0);
+}
+#bars{
+    height: 30px;
+    left: 50%;
+    margin: -30px 0 0 -20px;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+}
+.bor{
+    background: #E20074;
+    bottom: 1px;
+    height: 3px;
+    position: absolute;
+    width: 3px;
+    animation: sound 0ms -800ms linear infinite alternate;
+}
+@keyframes sound{
+ 0% {
+    opacity: .35;
+    height: 3px;
+}
+ 100% {
+    opacity: 1;
+    height: 38px;
+    }
+}
+
+.bor:nth-child(1) {left: 1px; animation-duration: 474ms;}
+.bor:nth-child(2) {left: 5px; animation-duration: 433ms;}
+.bor:nth-child(3) {left: 9px; animation-duration: 407ms;}
+.bor:nth-child(4) {left: 13px; animation-duration: 458ms;}
+.bor:nth-child(5) {left: 17px; animation-duration: 400ms;}
+.bor:nth-child(6) {left: 21px; animation-duration: 427ms;}
+.bor:nth-child(7) {left: 25px; animation-duration: 441ms;}
+.bor:nth-child(8) {left: 29px; animation-duration: 419ms;}
+.bor:nth-child(9) {left: 33px; animation-duration: 487ms;}
+.bor:nth-child(10) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(11) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(12) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(13) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(14) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(15) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(16) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(17) {left: 37px; animation-duration: 442ms;}
+.bor:nth-child(18) {left: 37px; animation-duration: 442ms;
+margin-top: 600px;}
+
+.kantenr{
+    width: 100%;
+    height: 641px;
+    background-image:linear-gradient(45deg,red,blue, rgb(0, 255, 200)) ;
+    display: flex;
+    justify-content: center;
+}
+.kuvadirad1{
+    width: 150px;
+    height: 150px;
+    background-image:linear-gradient(45deg,rgb(255, 0, 157),blue, rgb(0, 153, 255)) ;
+    position: absolute;
+    top: 80px;
+    margin-right: 400px;
+    border-radius: 10px;
+
+    animation-name: anime;
+    animation-duration: 03s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes anime{
+    trom{
+        transform: translateY(50px);
+
+    }
+    to{
+        transform: translateY(100px);
+    }
+}
+.box{
+    width: 400px;
+    height: 500px;
+    background: rgba(168, 168, 168, 0.199);
+    position: absolute;
+    top: 100px;
+    margin-right: 50px;
+}
+.box h2{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 35px;
+    color: rgb(255, 0, 157);
+}
+.box input{
+    width: 90%;
+    height: 32px;
+    border: none;
+    border-radius: 10px;
+    border: 1px solid #fff;
+    color: #fff;
+    background: rgba(168, 168, 168, 0.199);
+    padding: 0 15px;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+.box button{
+    width: 90%;
+    height: 32px;
+    border: none;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 20px;
+    background-image:linear-gradient(45deg,red,blue, rgb(0, 255, 200)) ;
+
+    padding: 0 15px;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+.kuvadirad2{
+    width: 150px;
+    height: 150px;
+    background-image:linear-gradient(45deg,rgb(255, 0, 157),blue, rgb(0, 153, 255)) ;
+    position: absolute;
+    top: 480px;
+    margin-left: 300px;
+    border-radius: 10px;
+    
+    animation-name: animea;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes animea{
+    trom{
+        transform: translateY(50px);
+    }
+    to{
+        transform: translateY(-100px);
+    }
+}
+
+
+.wrapper{
+    display: flex;
+}
+.reg1{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    position: absolute;
+    top: 400px;
+    left: 600px;
+    border: 8px solid rgb(255, 0, 157);
+    transition: 1s;
+    
+    animation-name: daf;
+    animation-duration: 02s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes daf{
+    trom{
+        transform: rotate(50px);
+    }
+    to{
+        transform: rotate(90deg);
+    }
+}
+
+.reg2{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    position: absolute;
+    top: 400px;
+    left: 600px;
+    border: 8px solid rgb(255, 0, 157);
+    transition: .5s;
+
+    animation-name: man;
+    animation-duration: 02s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes man{
+    trom{
+        transform: rotate(50px);
+    }
+    to{
+        transform: rotate(-90deg);
+    }
+}
+
+
+.reg3{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 450px;
+    left: 100px;
+    background-image:linear-gradient(45deg,rgba(255, 0, 0, 0.11),rgba(0, 0, 255, 0.048), rgba(0, 255, 200, 0.123)) ;
+    transition: .5s;
+
+    animation-name: faf;
+    animation-duration: 02s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+@keyframes faf{
+    trom{
+        transform: rotate(50px);
+    }
+    to{
+    transform: scale(2.5);
+    }
+}
+
+.main{
+    width: 100%;
+    height: 640px;
+    background: black;
+}
+.battery-top{
+    width: 40px;
+    height: 20px;
+    background: black;
+    margin: 0 auto;
+    border: 3px solid silver;
+    border-top-right-radius: 8px;   
+    border-top-left-radius: 8px;
+}
+.battery-content{
+    width: 150px;
+    height: 250px;
+    background: black;
+    position: relative;
+    margin: 0 auto;
+    border-radius: 18px;
+    border: 3px solid silver;
+}
+.charge{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    border-radius: 14px;
+    animation: battery 8s linear infinite;
+}
+@keyframes battery {
+    0% {
+        height: 0%;
+        background-color: red;
+    }
+    25% {
+        height: 25%;
+        background-color: orange;
+    }
+    50% {
+        height: 50%;
+        background: yellow;
+    }
+    75% {
+        height: 75%;
+        background: #d7fc03;
+    }
+    100% {
+        height: 100%;
+        background: rgb(0, 255, 0);
+    }
+}
